--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "buefy": "^0.8.12",
     "core-js": "^3.6.4",
+    "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vue-socket.io": "^3.0.7",
+    "vue-socket.io-extended": "^4.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
